# insight_2_profit

./: .tool-versions  README.md  docker-compose.yml  poe_tasks.yaml  pyproject.toml
insight_2_profit/: input_data.py  pipeline.py  publish_tables.py  raw_to_store.py  report.py  store_tables.py
insight_2_profit/store_to_publish/: __init__.py  product.py  sales_order.py
scripts/: run.py
tests/: conftest.py  test_product.py  test_sales_order.py
